stuck the footer to the bottom, made the design responsive, and fixed some minor grammar issues in the copy.

--- a/assets/stylesheets/theme.css
+++ b/assets/stylesheets/theme.css
@@ -3,25 +3,30 @@ html {
 }
 
 body {
+  overflow: hidden;
+  width: 100%;
   margin: 0;
   padding: 0;
   background: #BE93C5;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #7BC6CC, #BE93C5);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #7BC6CC, #BE93C5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   font-family: Abel, sans-serif;
+  display: flex;
+  flex-direction: column;
   }
+
 
 h1   {
   color: #000000;
   font-size: 3rem;
-  /*text-align: center;*/
+  text-align: center;
   margin: 0;
   }
 
 h2   {
   color: #000000;
   font-size: 2rem;
-  /*text-align: center;*/
+  text-align: center;
   margin: 0;
   }
 
@@ -29,16 +34,18 @@ main {
   margin: 40px;
   padding: 10px;
   display: flex;
+  flex-direction: column;
 }
 
 .circle {
     border-radius: 50%;
     width: 200px;
+    display: block;
+    margin: auto;
 }
 
 #pic {
   padding: 0;
-  margin-right: 20px;
 }
 
 #info {
@@ -51,6 +58,7 @@ main {
 
 
 #bio {
+  margin-top: 20px;
   background-color: #ffffff;
   opacity: 0.7;
   padding: 10px;
@@ -94,4 +102,28 @@ ul  {
 
 p {
   margin: 0 15px;
+}
+
+footer {
+  background-color: #ffffff;
+  opacity: 0.7;
+  margin: 0;
+  width: 100%;
+  font-size: 1.5rem;
+  padding: 20px;
+  margin-top:auto;
+  margin-bottom:auto;
+  text-align:center;
+}
+
+@media screen and (min-width: 600px) {
+
+main {
+  flex-direction: row;
+}
+
+#pic {
+  margin-right: 20px;
+}
+
 }
